# mlops-project2

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
docker/: Dockerfile
src/: datamodules.py  models.py
