[tool.poetry]
name = "mlops-project-2"
version = "0.1.0"
description = ""
authors = ["Roman Zberg <roman@zberg.ch>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11.0,<3.12.0"
torch = "^2.5.1"
transformers = "^4.46.2"
lightning = "^2.4.0"
datasets = "^3.1.0"
wandb = "^0.18.6"
evaluate = "^0.4.3"
jsonargparse = {extras = ["signatures"], version = "^4.33.2"}
scipy = "^1.14.1"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
